Fixed list row vertical alignment.

--- a/src/departureslist/departureslist.css
+++ b/src/departureslist/departureslist.css
@@ -78,12 +78,12 @@
 .departures-list .time {
     display: inline-block;
     text-align: left;
+    vertical-align: bottom;
 }
 
 .departures-list .route {
     display: inline-block;
     padding-left: .25em;
-    margin-bottom: -2px;
     overflow: hidden;
     vertical-align: middle;
     font-weight: 600;
@@ -102,9 +102,8 @@
     width: 3.25em;
     color: #444;
     text-align: right;
-    margin-right: .5em;
-    font-size: .92rem;
     display: inline-block;
+    vertical-align: bottom;
 }
 
 .departures-list svg.icon {
